<resources>

    <!-- ### GENERAL ### -->
    <string name="app_name">App Shooter</string>
    <string name="clear">Återställ</string>
    <string name="dash">-</string>
    <string name="email">E-post</string>
    <string name="female">Kvinna</string>
    <string name="figures">Figurer</string>
    <string name="figures_short">F</string>
    <string name="hits">Träff</string>
    <string name="hits_short">T</string>
    <string name="hfp">T/F/P</string>
    <string name="px">P/X</string>
    <string name="male">Man</string>
    <string name="medal">🏅</string>
    <string name="my_results">Mina resultat</string>
    <string name="name">Namn</string>
    <string name="password">Lösenord</string>
    <string name="phone">Telefon</string>
    <string name="placement">#</string>
    <string name="points">Poäng</string>
    <string name="points_short">P</string>
    <string name="select_gender">Välj kön</string>
    <string name="settings_logout">Logga ut</string>
    <string name="shooting_card_number">Pskn: %1$s</string>
    <string name="sign_up">Anmälan</string>
    <string name="bronze">🥉</string>
    <string name="silver">🥈</string>
    <string name="title_activity_main">AppShooter</string>
    <string name="unknown">Okänd</string>
    <string name="unknown_club">Okänd klubb</string>
    <string name="x">X</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="updates_in">Uppdateras om %1$ds</string>

    <!-- ### CLUB ### -->
    <string name="club_address">Adress</string>
    <string name="club_bankgiro">Bankgiro</string>
    <string name="club_club_number">Föreningsnummer</string>
    <string name="club_club_tab_admins">Administratörer</string>
    <string name="club_club_tab_information">Information</string>
    <string name="club_club_tab_users">Medlemmar</string>
    <string name="club_member_status">Status: %1$s</string>
    <string name="club_postgiro">Postgiro</string>
    <string name="club_swish">Swish</string>
    <string name="club_no_members">Inga medlemmar hittade</string>

    <!-- ### COMPETITIONS ### -->
    <string name="competitions_collapse">Komprimera</string>
    <string name="competitions_competition_type">Tävlingstyp: %1$s</string>
    <string name="competitions_information">Information</string>
    <string name="competitions_contact_name">Kontakt person: %1$s</string>
    <string name="competitions_arranger">Arrangör</string>
    <string name="competitions_venue">Tävlingsplats</string>
    <string name="competitions_city">Ort</string>
    <string name="competitions_contact_person">Kontaktperson</string>
    <string name="competitions_phone">Telefonnummer</string>
    <string name="competitions_email">E-postadress</string>
    <string name="competitions_website">Webbplats</string>
    <string name="competitions_contact_information">Kontaktinformation</string>
    <string name="competitions_date">Datum: %1$s</string>
    <string name="competitions_description">Beskrivning:</string>
    <string name="competitions_expand">Expandera</string>
    <string name="competitions_last_signup_date">Sista anmälningsdag: %1$s</string>
    <string name="competitions_late_signup">Efteranmälan: %1$s</string>
    <string name="competitions_no">Nej</string>
    <string name="competitions_no_competitions_match_filter">Hittar inte någon tävling.</string>
    <string name="competitions_load_error">Kunde inte ladda tävlingar.</string>
    <string name="competitions_retry">Försök igen</string>
    <string name="competitions_open_for_team_signup">Öppnen för laganmälan: %1$s</string>
    <string name="competitions_result">Resultat</string>
    <string name="competitions_result_calculation">Resultatberäkning: %1$s</string>
    <string name="competitions_status">Status: %1$s</string>
    <string name="competitions_patrols_button">Patruller</string>
    <string name="competitions_relays_button">Skjutlag</string>
    <string name="competitions_team_signup">Lagtävling: %1$s</string>
    <string name="competitions_teams_button">Lag</string>
    <string name="competition_teams_no_teams">Inga lag</string>
    <string name="competition_teams_title_count">%1$d Lag / %2$d Skyttar</string>
    <string name="competition_teams_member_count">%1$d skyttar</string>
    <string name="competition_name">Namn</string>
    <string name="competitions_yes">Ja</string>
    <string name="competitions_filter_status">Status</string>
    <string name="competitions_open_map">Öppna karta</string>
    <string name="competitions_add_to_calendar">Lägg till i kalender</string>

    <!-- ### LOGIN ### -->
    <string name="login_login">Inloggning</string>
    <string name="login_username">Användarnamn</string>
    <string name="toggle_password_visibility">Visa/dölj lösenord</string>
    <string name="navigate_back">Tillbaka</string>

    <!-- ### RESULTS ### -->
    <string name="results_done_button">Klar</string>
    <string name="results_filter_all">Alla</string>
    <string name="results_filter_none">Ingen</string>
    <string name="results_no_results_found">Inga resultat hittade</string>
    <string name="results_select_weapon_groups">Välj vapengrupper</string>
    <string name="results_grouping">Gruppering</string>
    <string name="results_grouping_weapon_class">Vapenklass</string>
    <string name="results_grouping_club">Klubb</string>
    <string name="results_grouping_medl">Medl</string>
    <string name="results_grouping_none">Ingen</string>
    <string name="results_no_groups_selected">Inga vapengrupper valda</string>

    <!-- ### SETTINGS ### -->
    <string name="settings_birth_year">Födelseår</string>
    <string name="settings_cancel">Avbryt</string>
    <string name="settings_change_password">Ändra lösenord</string>
    <string name="settings_confirm_new_password">Bekräfta nytt lösenord</string>
    <string name="settings_current_password">Nuvarande lösenord</string>
    <string name="settings_edit_profile">Redigera profil</string>
    <string name="settings_first_name">Förnamn</string>
    <string name="settings_gender">Kön</string>
    <string name="settings_home_phone">Hemtelefon</string>
    <string name="settings_last_name">Efternamn</string>
    <string name="settings_mobile">Mobilnummer</string>
    <string name="settings_mobile_phone">Mobiltelefon</string>
    <string name="settings_new_password">Nytt lösenord</string>
    <string name="settings_no_profile_data">Ingen profildata tillgänglig.</string>
    <string name="settings_personal_information">Personlig information</string>
    <string name="settings_profile">Profil</string>
    <string name="settings_save">Spara</string>
    <string name="settings_select_birth_year">Välj födelseår</string>
    <string name="settings_shooting_card_no">Skyttekortsnr</string>
    <string name="settings_shooting_card_number_label">Skyttekortsnummer</string>
    <string name="settings_update_password">Uppdatera lösenord</string>
    <string name="logga_out_confirm">Är du säker på att du vill logga ut?</string>

    <!-- ### SHOOTER_RESULT ### -->
    <string name="shooter_result_serie">Serie</string>
    <string name="shooter_result_station">Station</string>

    <!-- ### SIGNUP ### -->
    <string name="signup_current_signups">Nuvarande anmälningar</string>
    <string name="signup_note">Notering</string>
    <string name="signup_remove_signup">Ta bort</string>
    <string name="signup_select_weapon_class">Välj vapenklass</string>

    <!-- ### WEAPON ### -->
    <string name="weapon_class">Klass</string>
    <string name="weapon_class_short">K</string>
    <string name="weapon_group">Vapengrupp: </string>
    <string name="weapon_groups">Vapengrupper: </string>

    <!-- ### CHARTS ### -->
    <string name="charts_add_shooter">Lägg till skytt</string>
    <string name="charts_search_shooter">Sök skytt</string>
    <string name="charts_no_data">Ingen data</string>
    <string name="charts_close">Stäng</string>
    <string name="charts_remove">Ta bort</string>
    <string name="charts_my_results">Mina resultat</string>
    <string name="charts_average_score">Medelpoäng per serie</string>
    <string name="charts_subtitle">Snittpoäng per tävling över tid</string>
    <string name="charts_legend_average">Snitt</string>
    <string name="charts_legend_trend">Trend</string>

    <!-- ### SERIES_POINTS ### -->
    <string name="series_points_title">Seriepoäng</string>
    <string name="series_points_select_shooter">Välj skytt</string>
    <string name="series_points_change_shooter">Byt skytt</string>
    <string name="series_points_subtitle">Poäng per serie i precisions tävlingar</string>

    <!-- ### WEB_SHOOTER ### -->
    <string name="web_shooter_charts">Resultattrender</string>
    <string name="web_shooter_series_points">Serieresultat</string>
    <string name="menu_group_competitions">Tävlingar</string>
    <string name="menu_group_stats">Statistik</string>
    <string name="menu_group_club">Förening</string>
    <string name="menu_group_settings">Inställningar</string>
    <string name="menu_group_other">Övrigt</string>
    <string name="web_shooter_club_stats">Föreningsstatistik</string>
    <string name="club_stats_subtitle">Snittpoäng / antal tävlingar i precision</string>
    <string name="club_stats_all_years">Alla år</string>
    <string name="web_shooter_club">Förening</string>
    <string name="web_shooter_competitions">Tävlingar</string>
    <string name="web_shooter_menu">Meny</string>
    <string name="web_shooter_menu_content_description">Meny</string>
    <string name="web_shooter_settings">Inställningar</string>
    <string name="web_shooter_licenses">Licenser</string>
    <string name="web_shooter_send_suggestion">Skicka förslag</string>
    <string name="send_suggestion_email_subject">Webshooter: förslag</string>
    <string name="send_suggestion_email_recipient" translatable="false">erbsman@gmail.com</string>

    <!-- ### COMPETITION_PATROLS ### -->
    <string name="competition_patrols_title">Patruller</string>
    <string name="competition_patrols_patrol_number">Patrull %1$d</string>
    <string name="competition_patrols_relay_number">Skjutlag %1$d</string>
    <string name="competition_patrols_participant_count">%1$d st</string>
    <string name="competition_patrols_no_patrols">Inga patruller</string>
    <string name="competition_patrols_no_relays">Inga Skjutlag</string>
    <string name="competition_patrols_sort_label">Sortering</string>
    <string name="competition_patrols_sort_name">Namn</string>
    <string name="competition_patrols_name_club">Namn/Klubb</string>
    <string name="competition_patrols_sort_club">Klubb</string>
    <string name="competition_patrols_sort_group">Grupp</string>
    <string name="competition_patrols_filter_all">Alla</string>
    <string name="competition_patrols_filter_club_label">Filtrera på klubb</string>
    <string name="competition_patrols_filter_group_label">Filtrera på vapengrupp</string>
    <string name="competition_patrols_clear_filters">Återställ filter</string>

    <!-- ### COMPETITION_SIGNUPS_LIST ### -->
    <string name="competition_signups_list_participants">Deltagare</string>
    <string name="competition_signups_list_participants_count">%1$d Deltagare / %2$d Starter</string>
    <string name="competition_signups_list_filter_all">Alla</string>
    <string name="competition_signups_list_sort_name">Namn</string>
    <string name="competition_signups_list_sort_club">Klubb</string>
    <string name="competition_signups_list_sort_group">Grupp</string>
    <string name="competition_signups_list_no_signups">Inga anmälningar</string>
    <string name="competition_signups_list_sort_label">Sortering</string>
    <string name="competition_signups_list_filter_club_label">Filtrera på klubb</string>
    <string name="competition_signups_list_filter_group_label">Filtrera på vapengrupp</string>
    <string name="competition_signups_list_clear_filters">Återställ filter</string>

    <!-- ### SIGNUPS ### -->
    <string name="signups_col_class">Klass</string>
    <string name="signups_col_fee">Avgift</string>
    <string name="signups_col_lane">Bana</string>
    <string name="signups_col_note">Notering</string>
    <string name="signups_col_start">Start</string>
    <string name="signups_col_team">Lag</string>
    <string name="signups_no_entries">Inga tävlingar</string>

    <!-- ### MY RESULTS ### -->
    <string name="my_results_all_time">Alla år</string>
    <string name="my_results_summary">Sammanfattning</string>
    <string name="my_results_summary_class">Klass</string>
    <string name="my_results_summary_starter">Starter</string>
    <string name="my_results_summary_avg_score">x̄ Poäng</string>
    <string name="my_results_summary_avg_hits_falt">x̄ Träff</string>
    <string name="my_results_summary_avg_hits_pres">x̄ X</string>
    <string name="my_results_summary_figures">Figurer</string>
    <string name="my_results_competitions">Tävlingar</string>
    <string name="my_results_symbols_title">Symbolförklaring</string>
    <string name="my_results_symbols_close">Stäng</string>
    <string name="my_results_symbol_xbar">x̄</string>
    <string name="my_results_symbol_xbar_desc">Medelvärde per station/serie</string>
    <string name="my_results_symbol_sigma_desc">Summa</string>
    <string name="my_results_symbol_p">p.</string>
    <string name="my_results_symbol_p_desc">Poäng</string>
    <string name="my_results_symbol_h">t.</string>
    <string name="my_results_symbol_h_desc">Träffar</string>
    <string name="my_results_symbol_x">X</string>
    <string name="my_results_symbol_x_desc">Innertior</string>
    <string name="my_results_symbol_f">f.</string>
    <string name="my_results_symbol_f_desc">Figurträffar</string>
    <string name="my_results_symbol_medal_pts">🏅</string>
    <string name="my_results_symbol_medal_pts_desc">Standardmedalj poäng (Silver\=2, Brons\=1)</string>
    <!-- ### LICENSES ### -->
    <string name="licenses_header">Den här appen använder följande bibliotek med öppen källkod.</string>
    <string name="licenses_apache_license">Apache License 2.0</string>

    <string name="loading">Laddar…</string>
    <string name="shooters">%1$d skyttar</string>
    <string name="search">Sök</string>

</resources>
